@@ -15,7 +15,7 @@ FIXME: Needs update for stretch
 Versions of GCC present in Debian Stretch
 -----------------------------------------
 
-- GCC 5 is the default compiler for for all frontends on all architectures
+- GCC 5 is the default compiler for all frontends on all architectures
   except for Ada.
 
 - GCC 4.9 is the default compiler for Ada.
@@ -47,7 +47,7 @@ making sure you are always using the one preferred for that
 architecture. To use the other compiler, simply set CC=gcc-5, or
 similar.
 
-The default compiler versions for Debian GNU/Linux on amd64 are
+The default compiler versions for Debian GNU/Linux on i386 are
 (minor version numbers omitted):
 
 	cpp		: cpp-5
