@@ -166,13 +166,17 @@ REQV_46_GDC	:= $(REQV_46)
 REQV_47		:= (>= 4.7.3-1~)
 REQV_48		:= (>= 4.8.4-1~)
 REQV_49		:= (>= 4.9.3-10~)
-REQV_5		:= (>= 5.3.1-3~)
+REQV_5		:= (>= 5.3.1-17~)
 
-REQV_LIBGCJ_BC	:= (>= 4.9.3-1~)
+REQV_LIBGCJ_BC	:= (>= 5.3.1-17~)
 
 # architecture dependent variables
 DEB_HOST_ARCH		:= $(shell dpkg-architecture -qDEB_HOST_ARCH)
 DEB_HOST_GNU_TYPE	:= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
+ifneq (,$(filter $(DEB_HOST_ARCH), i386 kfreebsd-i386 hurd-i386))
+  DEB_HOST_GNU_TYPE := $(subst i586,i686,$(DEB_HOST_GNU_TYPE))
+  i586_symlinks = yes
+endif
 DEB_HOST_MULTIARCH	:= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 all_archs  = alpha amd64 armel armhf arm64 hppa i386 ia64 m68k mips mipsel mips64 mips64el or1k powerpc powerpcspe ppc64 ppc64el s390 s390x sh4 sparc sparc64 x32 hurd-i386 kfreebsd-amd64 kfreebsd-i386
@@ -359,7 +363,7 @@ CROSS_GNU_TYPE	= $(call _gnu_type,${CROSS_ARCH})
 all_packages    :=
 ifeq ($(with_native),yes)
   # FIXME: not all packages ...
-  all_packages	:= g++ gfortran gcj-jdk gobjc gobjc++ gdc gccgo libphobos-dev
+  all_packages	:= cpp gcc g++ gfortran gcj-jdk gobjc gobjc++ gdc gccgo libphobos-dev
   ifneq (,$(filter $(DEB_HOST_ARCH), $(hppa64_archs)))
     all_packages += gcc-hppa64-linux-gnu
   endif
@@ -1081,6 +1085,15 @@ ifneq (,$(filter gcc-hppa64-linux-gnu, $(packages)))
 	  )
 endif
 
+  ifeq ($(i586_symlinks),yes)
+	cd debian; \
+	for x in $$(find $(filter-out $(cross_packages), $(all_packages)) -type l -name 'i686-*'); do \
+	  link=$$(echo $$x | sed 's/i686-/i586-/'); \
+	  tgt=$$(basename $$x); \
+	  echo "Adding symlink: $$link -> $$tgt"; \
+	  rm -f $$link; cp -a $$x $$link; \
+	done
+  endif
 endif # with_native
 
 install.%: pre-install
